Event display modified to enable titleless events
Former-commit-id: 34fee4f4214aeccf863681ef3a3ad41ddfa02f40

--- a/pubman/pubman_presentation/src/main/webapp/viewItem/EventGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/EventGroup.jspf
@@ -45,6 +45,7 @@
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
 				<h:outputText value="#{ViewItemFull.pubItem.metadata.event.title.value}"/>
+				<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{ViewItemFull.pubItem.metadata.event.title.value == null || ViewItemFull.pubItem.metadata.event.title.value == ''}"/>
 			</span>
 		</div>
 
