--- a/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
@@ -43,6 +43,7 @@
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine newBlock" rendered="#{index.index > 0}"/>
 
 <%-- File name --%>
+	<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
 			<div class="free_area0 endline itemLine firstLine">
 				<div class="free_area0 endline itemLine firstLine">
 					<span class="xLarge_area0 endline labelLine featureIcon">
@@ -77,8 +78,7 @@
 					</div>
 				</div>
 			</div>
-			
-
+</h:panelGroup>
 <%-- File description --%>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
 				<b class="xLarge_area0_p8 endline labelLine">
