--- a/pubman/pubman_presentation/src/main/webapp/viewItem/SourceGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/SourceGroup.jspf
@@ -98,21 +98,20 @@
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:outputText value="#{lbl.lbl_noEntry}" rendered="#{ViewItemFull.sourceCreatorPersonsIterator.rowCount <= 0 && ViewItemFull.sourceCreatorOrganizationsIterator.rowCount <=0}"/>
 					<tr:iterator var="sourceCreatorPerson" value="#{source.sourceCreatorArray}" binding="#{ViewItemFull.sourceCreatorPersonsIterator}" varStatus="index" rows="0">
-						<h:panelGroup styleClass="free_area0 creator">
-							<h:outputText value="#{sourceCreatorPerson.formattedDisplay}" escape="false"/>
-							<h:panelGroup rendered="#{sourceCreatorPerson.portfolioLink != null and sourceCreatorPerson.portfolioLink != ''}">
+						<h:panelGroup styleClass="free_area0 creator clear" rendered="#{sourceCreatorPerson.creatorType=='PERSON'}">
+							<h:outputText value="#{sourceCreatorPerson.creatorObj.formattedDisplay}, #{sourceCreatorPerson.creatorRole}" escape="false"/>
+							<h:panelGroup rendered="#{sourceCreatorPerson.creatorObj.portfolioLink != null and sourceCreatorPerson.creatorObj.portfolioLink != ''}">
 								&#160;
-								<h:outputLink id="lnkSourceCreatorPersonPortfolioLink" styleClass="authorCard" value="#{sourceCreatorPerson.portfolioLink}?lang=#{InternationalizationHelper.locale}" target="_blank">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
+								<h:outputLink id="lnkSourceCreatorPersonPortfolioLink" styleClass="authorCard" value="#{sourceCreatorPerson.creatorObj.portfolioLink}?lang=#{InternationalizationHelper.locale}" target="_blank">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
 							</h:panelGroup>							
+						</h:panelGroup>
+						<h:panelGroup styleClass="free_area0 creator clear" rendered="#{sourceCreatorPerson.creatorType=='ORGANIZATION'}">
+							<h:outputText value="#{sourceCreatorPerson.creatorObj.organizationName}, #{sourceCreatorPerson.creatorRole} "/>
+						&#160;
+							<h:outputLink id="lnkSourceCreatorOrganizationLink" styleClass="ouCard" rendered="#{sourceCreatorPerson.creatorObj.identifier != null and sourceCreatorPerson.creatorObj.identifier != ''}" value="#" onclick="openCenteredWindow('AffiliationDetailPage.jsp?id=#{sourceCreatorPerson.creatorObj.identifier}', 980, 400, 'Details');return false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
 						</h:panelGroup>
 						<h:outputText value="<br />" escape="false"/>
 					</tr:iterator>
-					<tr:iterator var="sourceCreatorOrganization" value="#{source.sourceCreatorOrganizationsArray}" binding="#{ViewItemFull.sourceCreatorOrganizationsIterator}" varStatus="index">
-						<h:panelGroup styleClass="free_area0 creator">
-							<h:outputText value="#{sourceCreatorOrganization.organizationName}"/>
-						</h:panelGroup>
-						<h:outputText value="<br />" escape="false"/>
-					</tr:iterator>		
 				</span>
 			</div>
 	
@@ -126,7 +125,8 @@
 					<tr:iterator id="creatorAffiliations" var="creatorAffiliation" value="#{source.sourceOrganizationList}" binding="#{ViewItemFull.sourceCreatorAffiliationsIterator}" varStatus="index" rows="0">
 						<h:panelGroup styleClass="xTiny_area0 endline"><h:outputText value="#{creatorAffiliation.position}"/></h:panelGroup>
 						<h:panelGroup styleClass="free_area0 affiliation">
-                        <h:outputText value="#{creatorAffiliation.organizationName}, #{creatorAffiliation.organizationAddress}, #{creatorAffiliation.organizationIdentifier}"/>
+                        <!--<h:outputText value="#{creatorAffiliation.organizationName}, #{creatorAffiliation.organizationAddress}, #{creatorAffiliation.organizationIdentifier}"/>-->
+                        	<h:outputText value="#{creatorAffiliation.organizationDescription}"/>
                         <h:panelGroup rendered="#{creatorAffiliation.hasOrganizationalIdentifier}">
                             &#160;
                             <h:outputLink id="lnkSourceCreatorAffiliationOrganizationDetails" value="" styleClass="ouCard" onclick="openCenteredWindow('#{ApplicationBean.appContext}AffiliationDetailPage.jsp?id=#{creatorAffiliation.organizationIdentifier}', 980, 400, 'Details');return false" target="_blank">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</h:outputLink>
